6741642: bad enum definition in ciTypeFlow.hpp Summary: Patch converted from TeamWare or webrev data Reviewed-by: darcy Contributed-by: Matthias Klose <doko@ubuntu.com>